--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -1156,6 +1156,9 @@ gap: 0.3rem;
   margin-bottom: 2rem;
   
 }
+#businesses{
+  min-height: 1500px;
+}
 #directory h2{
   color:var(--onlyMenuOptions-color);
   font-family:var(--font-title);
